[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpls"
version = "0.1.0"
authors = [ { name="Piotr Beling", email="qwak82@gmail.com" }, ]
description = "Tool for copying playlists to USB drives with format mapping and auto-transcoding."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
cpls = "cpls:main"